feat: validations Note model - added word_count, content_length, content_length_of_south_utility and content_length_of_north_utility methods to Note model - added seeds for Note (modified seed.rb file) - custom message in locales files

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,17 @@
 
 en:
   hello: "Hello world"
+  activerecord:
+    errors:
+      models:
+        note:
+          attributes:
+            title:
+              blank: "%{attribute} is a required field"
+            content:
+              blank: "%{attribute} is a required field"
+            note_type:
+              blank: "%{attribute} is a required field"
+            user_id:
+              blank: "%{attribute} must include a valid user ID"
+
