--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -31,3 +31,16 @@
 
 es:
   hello: "Hola Mundo!"
+  activerecord:
+    errors:
+      models:
+        note:
+          attributes:
+            title:
+              blank: "%{attribute} es un campo requerido"
+            content:
+              blank: "%{attribute} es un campo requerido"
+            note_type:
+              blank: "%{attribute} es un campo requerido"
+            user_id:
+              blank: "%{attribute} debe incluir un ID de usuario válido"
