feat: validations Note model - NorthUtility and SouthUtility modified: content_length_short and content_length_medium methods added - Note model modified: validate_content_length method added - custom message added to validate_content_length - content_length method modified

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,6 +40,7 @@ en:
               blank: "%{attribute} is a required field"
             content:
               blank: "%{attribute} is a required field"
+              validate_content_length: "The content field exceeds the number of words allowed"
             note_type:
               blank: "%{attribute} is a required field"
             user_id:
