--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -40,6 +40,7 @@ es:
               blank: "%{attribute} es un campo requerido"
             content:
               blank: "%{attribute} es un campo requerido"
+              validate_content_length: "El campo content excede la cantidad de palabras permitidas"
             note_type:
               blank: "%{attribute} es un campo requerido"
             user_id:
