feat: [TD-292] validations Note model (#3)
* feat: validations Note model
- added word_count, content_length, content_length_of_south_utility and content_length_of_north_utility methods to Note model
- added seeds for Note (modified seed.rb file)
- custom message in locales files

* feat: validations Note model
- NorthUtility and SouthUtility modified: content_length_short and content_length_medium methods added
- Note model modified: validate_content_length method added
- custom message added to validate_content_length
- content_length method modified

* feat: test to verify the relationship with the User model deleted

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -31,3 +31,17 @@
 
 es:
   hello: "Hola Mundo!"
+  activerecord:
+    errors:
+      models:
+        note:
+          attributes:
+            title:
+              blank: "%{attribute} es un campo requerido"
+            content:
+              blank: "%{attribute} es un campo requerido"
+              validate_content_length: "El campo content excede la cantidad de palabras permitidas"
+            note_type:
+              blank: "%{attribute} es un campo requerido"
+            user_id:
+              blank: "%{attribute} debe incluir un ID de usuario válido"
