--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,18 @@
 
 en:
   hello: "Hello world"
+  activerecord:
+    errors:
+      models:
+        note:
+          attributes:
+            title:
+              blank: "%{attribute} is a required field"
+            content:
+              blank: "%{attribute} is a required field"
+              validate_content_length: "The content field exceeds the number of words allowed"
+            note_type:
+              blank: "%{attribute} is a required field"
+            user_id:
+              blank: "%{attribute} must include a valid user ID"
+
