--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,6 +31,8 @@
 
 en:
   hello: "Hello world"
+  errors:
+    render_record_not_found: "Resource not found"
   activerecord:
     errors:
       models:
