--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -31,6 +31,8 @@
 
 es:
   hello: "Hola Mundo!"
+  errors:
+    render_record_not_found: "Recurso no encontrado"
   activerecord:
     errors:
       models:
