feat: [TD-294] show and index services for the Note resource (#5)
* feat: show and index services for the Note resource
- Note controller added
- index_note_serializer file added
- show_note_serializer file added
- new endpoints added: show and index Note

* feat: Note controller modified
- change IndexNoteSerializer for NoteSerializer
- modified index service response

* feat: removed pagination data for index response
- change NoteSerializer file for IndexNoteSerializer

* feat: index and show methods modified

* feat: corrections in Note controller
- index service modified
- application_controller modified
- new error message

* feat: minimum change in the validate_note_type? method

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,6 +31,9 @@
 
 en:
   hello: "Hello world"
+  errors:
+    render_record_not_found: "Resource not found"
+    render_invalid_filter_note_type: "The note type is not valid"
   activerecord:
     errors:
       models:
