--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -45,7 +45,7 @@ en:
               blank: "%{attribute} is a required field"
             content:
               blank: "%{attribute} is a required field"
-              validate_content_length: "The content field exceeds the number of words allowed"
+              validate_content_length: "A review cannot exceed %{limit} words."
             note_type:
               blank: "%{attribute} is a required field"
             user_id:
