feat: [TD-297] note creation service added (#8)
* feat: show and index services for the Note resource
- Note controller added
- index_note_serializer file added
- show_note_serializer file added
- new endpoints added: show and index Note

* feat: Note controller modified
- change IndexNoteSerializer for NoteSerializer
- modified index service response

* feat: removed pagination data for index response
- change NoteSerializer file for IndexNoteSerializer

* feat: authentication added
- Note controller modified

* feat: tests added
- index service
- show service

* feat: note creation service added

* feat: tests added to the note creation service

* feat: refactoring of Note controller tests
- POST #create

* feat: resolution of code conflicts and corrections in the note controller and tests

* feat: create service modified

* feat: refactoring of the create notes service

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -32,8 +32,10 @@
 es:
   hello: "Hola Mundo!"
   errors:
+    render_missing_parameters: "Faltan parámetros requeridos."
+    render_invalid_note_type: "El tipo de nota no es válido."
+    render_invalid_content: "Una reseña no puede superar las %{limit} palabras."
     render_record_not_found: "Recurso no encontrado."
-    render_invalid_filter_note_type: "El tipo de nota no es válido."
   activerecord:
     errors:
       models:
@@ -43,7 +45,7 @@ es:
               blank: "%{attribute} es un campo requerido"
             content:
               blank: "%{attribute} es un campo requerido"
-              validate_content_length: "El campo content excede la cantidad de palabras permitidas"
+              validate_content_length: "Una reseña no puede superar las %{limit} palabras."
             note_type:
               blank: "%{attribute} es un campo requerido"
             user_id:
