--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,8 +32,10 @@
 en:
   hello: "Hello world"
   errors:
+    render_missing_parameters: "Missing parameters required."
+    render_invalid_note_type: "The note type is not valid."
+    render_invalid_content: "A review cannot exceed %{limit} words."
     render_record_not_found: "Resource not found"
-    render_invalid_filter_note_type: "The note type is not valid"
   activerecord:
     errors:
       models:
@@ -43,7 +45,7 @@ en:
               blank: "%{attribute} is a required field"
             content:
               blank: "%{attribute} is a required field"
-              validate_content_length: "The content field exceeds the number of words allowed"
+              validate_content_length: "A review cannot exceed %{limit} words."
             note_type:
               blank: "%{attribute} is a required field"
             user_id:
