feat: [TD-303] setting the length of the content in the admin dashboard (#12)
* feat: New migration to add content_length_short and content_length_medium to utility table

* feat: setting the length of the content in the admin dashboard

* feat: modified migration
- south_utility model modified
- north_utility model modified
- utility model modified

* feat: tests of the Note model modified

--- a/app/views/admin/north_utilities/_show.html.arb
+++ b/app/views/admin/north_utilities/_show.html.arb
@@ -25,5 +25,11 @@ panel 'Utility' do
     row :notes_data_url do
       utility.notes_data_url
     end
+    row :content_short do
+      utility.content_length_short
+    end
+    row :content_medium do
+      utility.content_length_medium
+    end
   end
 end
