--- a/app/views/admin/south_utilities/_show.html.arb
+++ b/app/views/admin/south_utilities/_show.html.arb
@@ -25,5 +25,11 @@ panel 'Utility' do
     row :notes_data_url do
       utility.notes_data_url
     end
+    row :content_short do
+      utility.content_length_short
+    end
+    row :content_medium do
+      utility.content_length_medium
+    end
   end
 end
